--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ ul {
   padding: 0;
   outline: none;
   border: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-order:hover,
@@ -233,11 +234,13 @@ ul {
   border: none;
   border-radius: 4px;
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .all:hover {
   background-color: #404bbf;
   color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .web {
@@ -251,11 +254,13 @@ ul {
   border-radius: 4px;
   font-weight: 500;
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .web:hover {
   background-color: #404bbf;
   color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .app {
@@ -269,11 +274,13 @@ ul {
   border-radius: 4px;
   font-weight: 500;
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .app:hover {
   background-color: #404bbf;
   color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .design {
@@ -287,11 +294,13 @@ ul {
   border-radius: 4px;
   font-weight: 500;
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .design:hover {
   background-color: #404bbf;
   color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons .marketing {
@@ -310,12 +319,11 @@ ul {
 .buttons .marketing:hover {
   background-color: #404bbf;
   color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container {
   width: 1200px;
-  /* margin-top: -24px;
-  margin-bottom: -24px; */
 }
 
 .about-list {
@@ -473,6 +481,7 @@ ul {
   justify-content: space-between;
   margin-top: 72px;
   margin-bottom: 120px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-customers {
@@ -543,6 +552,8 @@ ul {
   justify-content: center;
   align-items: center;
   border-radius: 40px;
+  opacity: 1.5;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-content {
   margin: 0 auto;
@@ -551,6 +562,7 @@ ul {
   width: 50%;
   height: 500px;
   position: relative;
+  border-radius: 4px;
 }
 .close-btn {
   background-color: #fff;
@@ -562,6 +574,7 @@ ul {
   right: 24px;
   border: none;
 }
+
 .pages a:hover,
 .pages a:focus {
   color: #404bbf;
@@ -578,14 +591,45 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pages a.active-studio {
-  border-bottom: 6px solid #404bbf;
-  width: 48px;
-  height: 24px;
+  border-bottom: 3px solid #404bbf;
+  width: 50px;
+  height: 22px;
   border-radius: 2px;
 }
 .pages a.active-portfolio {
-  border-bottom: 6px solid #404bbf;
+  border-bottom: 3px solid #404bbf;
   width: 77px;
-  height: 24px;
+  height: 22px;
   border-radius: 2px;
+}
+.img-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  top: 0px;
+  height: 300px;
+  width: 361px;
+  position: absolute;
+  background-color: #4d5ae5;
+  opacity: 1.5;
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.img-overlay:hover .overlay {
+  transform: translateY(0px);
+}
+.overlay-text {
+  color: #f4f4fd;
+  font-family: var(--global-font-family);
+  display: flex;
+  margin-top: 40px;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-bottom: 164px;
+  line-height: 24px;
 }
